<resources>
    <string name="app_name">My Map View</string>
    <string name="MAPS_API_KEY">AIzaSyBN6HinZHINQqTw2Xgr3U_5nwMDq2XtUK0</string>
    <string name="address">Address</string>
    <string name="apartment">Apartment</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="country">Country</string>
    <string name="zipcode">Zipcode</string>
    <string name="register">Register</string>
    <string name="my_map_api_key">Fill your google cloud api key here</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="terrain">Terrain</string>
    <string name="hybrid">Hybrid</string>
    <string name="satellite">Satellite</string>
    <string name="normal">Normal</string>
    <string name="none">None</string>
    <string name="enter_your_location">Enter your location</string>
    <string name="get_location">Get Location</string>
    <string name="enter_destination">Enter destination</string>
</resources>