<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".RegisterFragment">

    <LinearLayout
        android:id="@+id/editTextLay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/editTextAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/address"
            android:inputType="textCapSentences"
            android:layout_marginTop="20dp"
            android:background="@drawable/edit_text_bg"
            android:paddingStart="15dp"
            android:paddingTop="10dp"
            android:paddingEnd="10dp"
            android:paddingBottom="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/textHint" />

        <EditText
            android:id="@+id/editTextApartment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/apartment"
            android:inputType="textCapSentences"
            android:layout_marginTop="20dp"
            android:background="@drawable/edit_text_bg"
            android:paddingStart="15dp"
            android:paddingTop="10dp"
            android:paddingEnd="10dp"
            android:paddingBottom="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/textHint" />

        <EditText
            android:id="@+id/editTextCity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/city"
            android:inputType="textCapSentences"
            android:layout_marginTop="20dp"
            android:background="@drawable/edit_text_bg"
            android:paddingStart="15dp"
            android:paddingTop="10dp"
            android:paddingEnd="10dp"
            android:paddingBottom="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/textHint" />

        <EditText
            android:id="@+id/editTextState"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/state"
            android:inputType="textCapSentences"
            android:layout_marginTop="20dp"
            android:background="@drawable/edit_text_bg"
            android:paddingStart="15dp"
            android:paddingTop="10dp"
            android:paddingEnd="10dp"
            android:paddingBottom="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/textHint" />

        <EditText
            android:id="@+id/editTextCountry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/country"
            android:inputType="textCapSentences"
            android:layout_marginTop="20dp"
            android:background="@drawable/edit_text_bg"
            android:paddingStart="15dp"
            android:paddingTop="10dp"
            android:paddingEnd="10dp"
            android:paddingBottom="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/textHint" />

        <EditText
            android:id="@+id/editTextZipcode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/zipcode"
            android:inputType="textCapSentences"
            android:layout_marginTop="20dp"
            android:background="@drawable/edit_text_bg"
            android:paddingStart="15dp"
            android:paddingTop="10dp"
            android:paddingEnd="10dp"
            android:paddingBottom="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/textHint" />



    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttonLay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextLay">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/register"
            android:textColor="@color/white"
            android:background="@drawable/all_btn_bg"/>

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>